--- a/bug_tracking/bug_detail/templates/bug_detail/index.html
+++ b/bug_tracking/bug_detail/templates/bug_detail/index.html
@@ -147,7 +147,7 @@
   
   <div class="modulo">
     {% if reporte %}
-      {% for Reporte,Usuario  in reporte %}
+      {% for Reporte  in reporte %}
         <div class="reporte container">
           <div class="id-fecha">
             <span class="text-1">
@@ -157,7 +157,7 @@
               Subido por:
             </span>
             <span class="text-usuario">
-              {{ Usuario.username }}
+              {{ Reporte.id_usuario.user.username }}
             </span>
             <span class="text-2 fecha">
               {{ Reporte.fecha_reporte | naturaltime }}
