--- a/bug_tracking/home/static/css/start.css
+++ b/bug_tracking/home/static/css/start.css
@@ -200,31 +200,25 @@
 /* VISTA DE USUARIO REGISTRADO */
 
 .box-info {
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-	grid-gap: 24px;
-	margin-top: 20px;
-	margin-left: 5%;
-    margin-bottom: 2rem;
-	/* width: 90%; */
-	margin-right: 5%;
-	/* justify-content: center; */
+    margin-right: 5%;
+    margin-left: 5%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-gap: 24px;
 }
 
 .box-info li {
-	/* padding: 20px; */
-	/* padding-right: 24px; */
-	/* padding-left: 24px; */
+	padding: 24px;
 	background: var(--sidebar-color);
-	border-radius: 15px;
+	border-radius: 20px;
 	display: flex;
 	align-items: center;
 	grid-gap: 24px;
 }
 
 .box-info li .bx {
-	width: 140px;
-	height: 120px;
+	width: 80px;
+	height: 80px;
 	border-radius: 10px;
 	font-size: 36px;
 	display: flex;
